--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="partida">
             <div class="mandante" id="duelo">
                 <div><img src="" id="img-mandante"></div>
-                <label for="time1">Escolha o time mandante</label>
+                <label for="time1">Time mandante</label>
                 <form id="time1" autofocus="true"> 
                     <select id="divisao" onchange="mudar2()">
                         <option data-dado="Independência" value="americamg_bra.png">Série A</option>
@@ -65,7 +65,7 @@
 
             <div class="visitante" id="duelo">
                 <div><img src="" id="img-visitante"></div>
-                <label for="time2">Escolha o time visitante</label>
+                <label for="time2">Time visitante</label>
                 <form id="time2" autofocus="true"> 
                     <select id="divisao1" onchange="mudar3()">
                         <option value="seriea">Série A</option>
