--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
     <div id="menum">
-        <img id="xm" src="versus.png" onclick="fecharMenu()">
+        
         <ul id="ulm">
-            <li class="lim"><a class="am" href="index.html"><img id="espadas" src="espadas.png">Duelo</a></li>
+            <li class="lim"><a class="am" href="index.html"><img id="espadas" src="espadas.png">Duelo</a><img id="xm" src="versus.png" onclick="fecharMenu()"></li>
             <hr>
             <li class="lim"><a class="am" href="campeonatos.html"><img id="bola" src="bolafutebol.png">Campeonatos</a></li>
             <hr>
